--- a/OnlinerNotifier/OnlinerNotifier.BLL Tests/packages.config
+++ b/OnlinerNotifier/OnlinerNotifier.BLL Tests/packages.config
@@ -1,6 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="4.0.0-alpha001" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Moq" version="4.6.25-alpha" targetFramework="net452" />
   <package id="NUnit" version="3.4.0" targetFramework="net452" />
+  <package id="NUnit.ConsoleRunner" version="3.4.0" targetFramework="net452" />
+  <package id="NUnit.Engine" version="3.4.0" targetFramework="net452" />
+  <package id="NUnit.Extension.NUnitProjectLoader" version="3.4.0" targetFramework="net452" />
+  <package id="NUnit.Extension.NUnitV2Driver" version="3.4.0" targetFramework="net452" />
+  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.4.0" targetFramework="net452" />
+  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.0" targetFramework="net452" />
+  <package id="NUnit.Extension.VSProjectLoader" version="3.4.0" targetFramework="net452" />
+  <package id="NUnit.Runners" version="3.4.0" targetFramework="net452" />
+  <package id="NUnit3TestAdapter" version="3.2.0" targetFramework="net452" />
 </packages>
