--- a/OnlinerNotifier/OnlinerNotifier.BLL Tests/packages.config
+++ b/OnlinerNotifier/OnlinerNotifier.BLL Tests/packages.config
@@ -7,4 +7,6 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Moq" version="4.6.25-alpha" targetFramework="net452" />
   <package id="NUnit" version="3.4.0" targetFramework="net452" />
+  <package id="NUnit3TestAdapter" version="3.2.0" targetFramework="net452" />
+  <package id="NUnitTDNet" version="3.4.0.241-beta" targetFramework="net452" />
 </packages>
