--- a/OnlinerNotifier/OnlinerNotifier.DAL/OnlinerNotifier.DAL.csproj
+++ b/OnlinerNotifier/OnlinerNotifier.DAL/OnlinerNotifier.DAL.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Context.cs" />
+    <Compile Include="IUnitOfWork.cs" />
     <Compile Include="Migrations\201606200938439_Initial.cs" />
     <Compile Include="Migrations\201606200938439_Initial.Designer.cs">
       <DependentUpon>201606200938439_Initial.cs</DependentUpon>
@@ -57,10 +58,11 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ProductPriceChange.cs" />
     <Compile Include="Models\UserProduct.cs" />
-    <Compile Include="Repositories\Interface\IRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IRepository.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\Interfaces\IUserRepository.cs" />
     <Compile Include="Repositories\ProductPriceChangeRepository.cs" />
     <Compile Include="Repositories\ProductRepository.cs" />
     <Compile Include="Repositories\UserProductRepository.cs" />
