--- a/OnlinerNotifier/OnlinerNotifier.BLL Tests/OnlinerNotifier.BLL Tests.csproj
+++ b/OnlinerNotifier/OnlinerNotifier.BLL Tests/OnlinerNotifier.BLL Tests.csproj
@@ -90,9 +90,12 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="Moq\MockStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\TimeCalculationServiceTest.cs" />
-    <Compile Include="Services\UserServiceTest.cs" />
+    <Compile Include="Services\TrackingServiceTest.cs" />
+    <Compile Include="Services\UserServiceAddOrUpdateTest.cs" />
+    <Compile Include="Services\UserServiceGetTest.cs" />
     <Compile Include="Validators\EmailValidatorTest.cs" />
   </ItemGroup>
   <ItemGroup>
