--- a/OnlinerNotifier/OnlinerNotifier.BLL Tests/OnlinerNotifier.BLL Tests.csproj
+++ b/OnlinerNotifier/OnlinerNotifier.BLL Tests/OnlinerNotifier.BLL Tests.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\TimeCalculationServiceTest.cs" />
     <Compile Include="Services\TrackingServiceTest.cs" />
+    <Compile Include="Services\UserServiceGetUserDataTest.cs" />
     <Compile Include="Services\UserServiceAddOrUpdateTest.cs" />
     <Compile Include="Services\UserServiceGetTest.cs" />
     <Compile Include="Validators\EmailValidatorTest.cs" />
