--- a/OnlinerNotifier/OnlinerNotifier.BLL Tests/OnlinerNotifier.BLL Tests.csproj
+++ b/OnlinerNotifier/OnlinerNotifier.BLL Tests/OnlinerNotifier.BLL Tests.csproj
@@ -106,9 +106,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\TimeCalculationServiceTest.cs" />
     <Compile Include="Services\TrackingServiceTest.cs" />
-    <Compile Include="Services\UserServiceGetUserDataTest.cs" />
-    <Compile Include="Services\UserServiceAddOrUpdateTest.cs" />
-    <Compile Include="Services\UserServiceGetTest.cs" />
+    <Compile Include="Services\UserServiceTests\UserServiceGetUserDataTest.cs" />
+    <Compile Include="Services\UserServiceTests\UserServiceAddOrUpdateTest.cs" />
+    <Compile Include="Services\UserServiceTests\UserServiceGetTest.cs" />
+    <Compile Include="Services\UserServiceTests\UserServiceSetNotificationParametersTest.cs" />
+    <Compile Include="Services\UserServiceTests\UserServiceTestBase.cs" />
     <Compile Include="Validators\EmailValidatorTest.cs" />
   </ItemGroup>
   <ItemGroup>
