--- a/OnlinerNotifier/OnlinerNotifier.BLL Tests/OnlinerNotifier.BLL Tests.csproj
+++ b/OnlinerNotifier/OnlinerNotifier.BLL Tests/OnlinerNotifier.BLL Tests.csproj
@@ -104,6 +104,7 @@
   <ItemGroup>
     <Compile Include="Moq\MockStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ProductServiceTests\ProductServiceAddTest.cs" />
     <Compile Include="Services\ProductServiceTests\ProductServiceTestBase.cs" />
     <Compile Include="Services\TimeCalculationServiceTest.cs" />
     <Compile Include="Services\TrackingServiceTest.cs" />
