--- a/OnlinerNotifier/OnlinerNotifier.BLL Tests/OnlinerNotifier.BLL Tests.csproj
+++ b/OnlinerNotifier/OnlinerNotifier.BLL Tests/OnlinerNotifier.BLL Tests.csproj
@@ -104,6 +104,7 @@
   <ItemGroup>
     <Compile Include="Moq\MockStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\EmailSendingServiceTest.cs" />
     <Compile Include="Services\NotificationServiceTest.cs" />
     <Compile Include="Services\OnlinerSearchServiceTest.cs" />
     <Compile Include="Services\PriceCheckingServiceTest.cs" />
