--- a/OnlinerNotifier/OnlinerNotifier.Web/OnlinerNotifier.Web.csproj
+++ b/OnlinerNotifier/OnlinerNotifier.Web/OnlinerNotifier.Web.csproj
@@ -179,6 +179,7 @@
     <Content Include="app\controllers\homeController.js" />
     <Content Include="app\filters\currencyFilter.js" />
     <Content Include="app\filters\trackingFormatFilter.js" />
+    <Content Include="app\other\signalRToastNotifications.js" />
     <Content Include="app\views\account.html" />
     <Content Include="app\views\auth.html" />
     <Content Include="app\views\home.html" />
