--- a/OnlinerNotifier/OnlinerNotifier.Web/OnlinerNotifier.Web.csproj
+++ b/OnlinerNotifier/OnlinerNotifier.Web/OnlinerNotifier.Web.csproj
@@ -248,7 +248,7 @@
     </Compile>
     <Compile Include="Hubs\ToastHub.cs" />
     <Compile Include="ToastNotifier\IToastNotifier.cs" />
-    <Compile Include="ToastNotifier\ToastNotifier.cs" />
+    <Compile Include="ToastNotifier\SignalRToastNotifier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scheduler\Jobs\CheckPricesJob.cs" />
     <Compile Include="Scheduler\JobFactory.cs" />
