--- a/OnlinerNotifier/OnlinerNotifier.BLL/OnlinerNotifier.BLL.csproj
+++ b/OnlinerNotifier/OnlinerNotifier.BLL/OnlinerNotifier.BLL.csproj
@@ -92,7 +92,7 @@
     <Compile Include="Models\UserDataViewModel.cs" />
     <Compile Include="Models\UserViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Redis\RedisConnectorHelper.cs" />
+    <Compile Include="Redis\RedisConnector.cs" />
     <Compile Include="Services\IEmailService.cs" />
     <Compile Include="Services\Implementations\EmailService.cs" />
     <Compile Include="Services\Implementations\NotificationService.cs" />
