--- a/OnlinerNotifier/OnlinerNotifier.Web/OnlinerNotifier.Web.csproj
+++ b/OnlinerNotifier/OnlinerNotifier.Web/OnlinerNotifier.Web.csproj
@@ -193,6 +193,7 @@
     <Content Include="app\filters\trackingFormatFilter.js" />
     <Content Include="app\other\netMQToastNotifications.js" />
     <Content Include="app\other\signalRToastNotifications.js" />
+    <Content Include="app\services\currencyService.js" />
     <Content Include="app\views\account.html" />
     <Content Include="app\views\auth.html" />
     <Content Include="app\views\home.html" />
