--- a/OnlinerNotifier/OnlinerNotifier.Web/OnlinerNotifier.Web.csproj
+++ b/OnlinerNotifier/OnlinerNotifier.Web/OnlinerNotifier.Web.csproj
@@ -190,6 +190,7 @@
     <Content Include="app\controllers\authController.js" />
     <Content Include="app\controllers\homeController.js" />
     <Content Include="app\filters\currencyFilter.js" />
+    <Content Include="app\filters\notificationFilter.js" />
     <Content Include="app\filters\trackingFormatFilter.js" />
     <Content Include="app\other\netMQToastNotifications.js" />
     <Content Include="app\other\signalRToastNotifications.js" />
