--- a/OnlinerNotifier/OnlinerNotifier.Web/OnlinerNotifier.Web.csproj
+++ b/OnlinerNotifier/OnlinerNotifier.Web/OnlinerNotifier.Web.csproj
@@ -199,11 +199,14 @@
     <Content Include="app\views\auth.html" />
     <Content Include="app\views\home.html" />
     <Content Include="app\views\navbar.html" />
+    <Content Include="Content\app\account.css" />
+    <Content Include="Content\app\auth.css" />
+    <Content Include="Content\app\home.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
-    <Content Include="Content\site.css" />
+    <Content Include="Content\app\site.css" />
     <Content Include="Content\toastr.css" />
     <Content Include="Content\toastr.min.css" />
     <Content Include="Content\ui-bootstrap-csp.css" />
