--- a/OnlinerNotifier/OnlinerNotifier.BLL/OnlinerNotifier.BLL.csproj
+++ b/OnlinerNotifier/OnlinerNotifier.BLL/OnlinerNotifier.BLL.csproj
@@ -93,24 +93,24 @@
     <Compile Include="Models\UserViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Redis\RedisConnector.cs" />
-    <Compile Include="Services\EmailServices\IEmailBuildingService.cs" />
-    <Compile Include="Services\EmailServices\IEmailService.cs" />
+    <Compile Include="Services\Interfaces\EmailServices\IEmailBuildingService.cs" />
+    <Compile Include="Services\Interfaces\EmailServices\IEmailService.cs" />
     <Compile Include="Services\Implementations\EmailServices\EmailBuildingService.cs" />
     <Compile Include="Services\Implementations\EmailServices\EmailService.cs" />
-    <Compile Include="Services\IRedisService.cs" />
+    <Compile Include="Services\Interfaces\IRedisService.cs" />
     <Compile Include="Services\Implementations\NotificationService.cs" />
     <Compile Include="Services\Implementations\RedisService.cs" />
     <Compile Include="Services\Implementations\TimeCalculationService.cs" />
     <Compile Include="Services\Implementations\OnlinerSearchService.cs" />
     <Compile Include="Services\Implementations\ProductService.cs" />
     <Compile Include="Services\Implementations\TrackingService.cs" />
-    <Compile Include="Services\INotificationService.cs" />
-    <Compile Include="Services\ITimeCalculationService.cs" />
-    <Compile Include="Services\IOnlinerSearchService.cs" />
-    <Compile Include="Services\IPricesCheckingService.cs" />
-    <Compile Include="Services\IProductService.cs" />
-    <Compile Include="Services\ITrackingService.cs" />
-    <Compile Include="Services\IUserService.cs" />
+    <Compile Include="Services\Interfaces\INotificationService.cs" />
+    <Compile Include="Services\Interfaces\ITimeCalculationService.cs" />
+    <Compile Include="Services\Interfaces\IOnlinerSearchService.cs" />
+    <Compile Include="Services\Interfaces\IPricesCheckingService.cs" />
+    <Compile Include="Services\Interfaces\IProductService.cs" />
+    <Compile Include="Services\Interfaces\ITrackingService.cs" />
+    <Compile Include="Services\Interfaces\IUserService.cs" />
     <Compile Include="Services\Implementations\UserService.cs" />
     <Compile Include="Services\Implementations\PriceCheckingService.cs" />
     <Compile Include="Templates\Builders\IPriceChangesEmailBuilder.cs" />
