--- a/OnlinerNotifier/OnlinerNotifier.BLL/OnlinerNotifier.BLL.csproj
+++ b/OnlinerNotifier/OnlinerNotifier.BLL/OnlinerNotifier.BLL.csproj
@@ -74,11 +74,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Mappers\EmailMapper.cs" />
-    <Compile Include="Mappers\PriceChangesMapper.cs" />
-    <Compile Include="Mappers\ProductMapper.cs" />
-    <Compile Include="Mappers\UserMapper.cs" />
-    <Compile Include="Mappers\UserProductsMapper.cs" />
+    <Compile Include="Mappers\Implementations\EmailMapper.cs" />
+    <Compile Include="Mappers\Interfaces\INotificationDataModelMapper.cs" />
+    <Compile Include="Mappers\Implementations\NotificationDataModelMapper.cs" />
+    <Compile Include="Mappers\Interfaces\INotificationProductChangesModelMapper.cs" />
+    <Compile Include="Mappers\Implementations\NotificationProductChangesModelMapper.cs" />
+    <Compile Include="Mappers\Implementations\PriceChangesMapper.cs" />
+    <Compile Include="Mappers\Implementations\ProductMapper.cs" />
+    <Compile Include="Mappers\Implementations\UserMapper.cs" />
+    <Compile Include="Mappers\Implementations\UserProductsMapper.cs" />
+    <Compile Include="Mappers\Interfaces\IEmailMapper.cs" />
     <Compile Include="Models\NotificationModels\NotificationDataModel.cs" />
     <Compile Include="Models\NotificationModels\NotificationEmailModel.cs" />
     <Compile Include="Models\NotificationModels\NotificationParametersModel.cs" />
@@ -94,11 +99,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Redis\RedisConnector.cs" />
     <Compile Include="Services\Interfaces\EmailServices\IEmailBuildingService.cs" />
+    <Compile Include="Services\Interfaces\EmailServices\IEmailSender.cs" />
     <Compile Include="Services\Interfaces\EmailServices\IEmailService.cs" />
     <Compile Include="Services\Implementations\EmailServices\EmailBuildingService.cs" />
     <Compile Include="Services\Implementations\EmailServices\EmailService.cs" />
+    <Compile Include="Services\Interfaces\INotifiableUsersProvider.cs" />
     <Compile Include="Services\Interfaces\IRedisService.cs" />
-    <Compile Include="Services\Implementations\NotificationService.cs" />
+    <Compile Include="Services\Implementations\NotificationDataService.cs" />
     <Compile Include="Services\Implementations\RedisService.cs" />
     <Compile Include="Services\Implementations\TimeCalculationService.cs" />
     <Compile Include="Services\Implementations\OnlinerSearchService.cs" />
@@ -120,6 +127,7 @@
     <Compile Include="Validators\EmailValidator.cs" />
     <Compile Include="SmtpClients\ISmtpClient.cs" />
     <Compile Include="SmtpClients\SmtpClientWrapper.cs" />
+    <Compile Include="Validators\IEmailValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -136,6 +144,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
